{
  "version": 4,
  "terraform_version": "1.7.0",
  "serial": 527,
  "lineage": "98885d53-aac9-70e2-3720-0037bf0ba10d",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "az_nic_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/f99fd6bf-e5f7-4050-8a87-7b12f5d4bb9f/resourceGroups/rg-tr-westus/providers/Microsoft.Network/networkInterfaces/nic-tr-db-westus",
            "internal_domain_name_suffix": "g0a0fn1c5ofezfdqxg0zx3x5eb.dx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "nic-ip-config-tr-db-westus",
                "primary": true,
                "private_ip_address": "10.0.0.10",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/f99fd6bf-e5f7-4050-8a87-7b12f5d4bb9f/resourceGroups/rg-tr-westus/providers/Microsoft.Network/virtualNetworks/vnet-tr-westus/subnets/snet-db-tr-westus"
              }
            ],
            "location": "westus",
            "mac_address": "00-22-48-03-D9-8A",
            "name": "nic-tr-db-westus",
            "private_ip_address": "10.0.0.10",
            "private_ip_addresses": [
              "10.0.0.10"
            ],
            "resource_group_name": "rg-tr-westus",
            "virtual_machine_id": "/subscriptions/f99fd6bf-e5f7-4050-8a87-7b12f5d4bb9f/resourceGroups/rg-tr-westus/providers/Microsoft.Compute/virtualMachines/vm_db_tr_westus"
          },
          "dependencies": [
            "azurerm_subnet.az_snet_db_tr_westus",
            "azurerm_virtual_network.az_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "az_nic_webapp",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/f99fd6bf-e5f7-4050-8a87-7b12f5d4bb9f/resourceGroups/rg-tr-westus/providers/Microsoft.Network/networkInterfaces/nic-tr-webapp-westus",
            "internal_domain_name_suffix": "g0a0fn1c5ofezfdqxg0zx3x5eb.dx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "nic-ip-config-tr-webapp-westus",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/f99fd6bf-e5f7-4050-8a87-7b12f5d4bb9f/resourceGroups/rg-tr-westus/providers/Microsoft.Network/publicIPAddresses/pip-te-webapp-westus",
                "subnet_id": "/subscriptions/f99fd6bf-e5f7-4050-8a87-7b12f5d4bb9f/resourceGroups/rg-tr-westus/providers/Microsoft.Network/virtualNetworks/vnet-tr-westus/subnets/snet-webapp-tr-westus"
              }
            ],
            "location": "westus",
            "mac_address": "00-22-48-03-D6-82",
            "name": "nic-tr-webapp-westus",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "rg-tr-westus",
            "virtual_machine_id": "/subscriptions/f99fd6bf-e5f7-4050-8a87-7b12f5d4bb9f/resourceGroups/rg-tr-westus/providers/Microsoft.Compute/virtualMachines/vm_webapp_tr_westus"
          },
          "dependencies": [
            "azurerm_public_ip.az_pip_webapp",
            "azurerm_subnet.az_snet_webapp_tr_westus",
            "azurerm_virtual_network.az_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "az_nsg_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f99fd6bf-e5f7-4050-8a87-7b12f5d4bb9f/resourceGroups/rg-tr-westus/providers/Microsoft.Network/networkSecurityGroups/nsg-db-tr-westus",
            "location": "westus",
            "name": "nsg-db-tr-westus",
            "resource_group_name": "rg-tr-westus",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "nsgsr_22",
                "priority": 105,
                "protocol": "*",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "5432",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "nsgsr_5432",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "nsgsr_deny",
                "priority": 110,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "az_nsg_webapp",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f99fd6bf-e5f7-4050-8a87-7b12f5d4bb9f/resourceGroups/rg-tr-westus/providers/Microsoft.Network/networkSecurityGroups/nsg-webapp-tr-westus",
            "location": "westus",
            "name": "nsg-webapp-tr-westus",
            "resource_group_name": "rg-tr-westus",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "nsgsr_22",
                "priority": 130,
                "protocol": "*",
                "source_address_prefix": "2.54.36.236",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "5000",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "nsgsr_5000",
                "priority": 120,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "nsgsr_80",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8080",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "nsgsr_8080",
                "priority": 110,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "az_pip_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/f99fd6bf-e5f7-4050-8a87-7b12f5d4bb9f/resourceGroups/rg-tr-westus/providers/Microsoft.Network/publicIPAddresses/pip-te-db-westus",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.237.250.30",
            "ip_version": "IPv4",
            "location": "westus",
            "name": "pip-te-db-westus",
            "resource_group_name": "rg-tr-westus",
            "sku": "Basic",
            "sku_tier": "Regional"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "az_pip_webapp",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/f99fd6bf-e5f7-4050-8a87-7b12f5d4bb9f/resourceGroups/rg-tr-westus/providers/Microsoft.Network/publicIPAddresses/pip-te-webapp-westus",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.118.144.85",
            "ip_version": "IPv4",
            "location": "westus",
            "name": "pip-te-webapp-westus",
            "resource_group_name": "rg-tr-westus",
            "sku": "Basic",
            "sku_tier": "Regional"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "az_snet_db_tr_westus",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/f99fd6bf-e5f7-4050-8a87-7b12f5d4bb9f/resourceGroups/rg-tr-westus/providers/Microsoft.Network/virtualNetworks/vnet-tr-westus/subnets/snet-db-tr-westus",
            "name": "snet-db-tr-westus",
            "resource_group_name": "rg-tr-westus",
            "virtual_network_name": "vnet-tr-westus"
          },
          "dependencies": [
            "azurerm_virtual_network.az_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "az_snet_webapp_tr_westus",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/f99fd6bf-e5f7-4050-8a87-7b12f5d4bb9f/resourceGroups/rg-tr-westus/providers/Microsoft.Network/virtualNetworks/vnet-tr-westus/subnets/snet-webapp-tr-westus",
            "name": "snet-webapp-tr-westus",
            "resource_group_name": "rg-tr-westus",
            "virtual_network_name": "vnet-tr-westus"
          },
          "dependencies": [
            "azurerm_virtual_network.az_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "az_snetsgas_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f99fd6bf-e5f7-4050-8a87-7b12f5d4bb9f/resourceGroups/rg-tr-westus/providers/Microsoft.Network/virtualNetworks/vnet-tr-westus/subnets/snet-db-tr-westus",
            "network_security_group_id": "/subscriptions/f99fd6bf-e5f7-4050-8a87-7b12f5d4bb9f/resourceGroups/rg-tr-westus/providers/Microsoft.Network/networkSecurityGroups/nsg-db-tr-westus",
            "subnet_id": "/subscriptions/f99fd6bf-e5f7-4050-8a87-7b12f5d4bb9f/resourceGroups/rg-tr-westus/providers/Microsoft.Network/virtualNetworks/vnet-tr-westus/subnets/snet-db-tr-westus"
          },
          "dependencies": [
            "azurerm_network_security_group.az_nsg_db",
            "azurerm_subnet.az_snet_db_tr_westus",
            "azurerm_virtual_network.az_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "az_snetsgas_webapp",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f99fd6bf-e5f7-4050-8a87-7b12f5d4bb9f/resourceGroups/rg-tr-westus/providers/Microsoft.Network/virtualNetworks/vnet-tr-westus/subnets/snet-webapp-tr-westus",
            "network_security_group_id": "/subscriptions/f99fd6bf-e5f7-4050-8a87-7b12f5d4bb9f/resourceGroups/rg-tr-westus/providers/Microsoft.Network/networkSecurityGroups/nsg-webapp-tr-westus",
            "subnet_id": "/subscriptions/f99fd6bf-e5f7-4050-8a87-7b12f5d4bb9f/resourceGroups/rg-tr-westus/providers/Microsoft.Network/virtualNetworks/vnet-tr-westus/subnets/snet-webapp-tr-westus"
          },
          "dependencies": [
            "azurerm_network_security_group.az_nsg_webapp",
            "azurerm_subnet.az_snet_webapp_tr_westus",
            "azurerm_virtual_network.az_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "az_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "b7a28136-fb62-4c8a-9470-b9b59bf6ff21",
            "id": "/subscriptions/f99fd6bf-e5f7-4050-8a87-7b12f5d4bb9f/resourceGroups/rg-tr-westus/providers/Microsoft.Network/virtualNetworks/vnet-tr-westus",
            "location": "westus",
            "name": "vnet-tr-westus",
            "resource_group_name": "rg-tr-westus",
            "subnet": [
              {
                "address_prefix": "10.0.0.0/24",
                "id": "/subscriptions/f99fd6bf-e5f7-4050-8a87-7b12f5d4bb9f/resourceGroups/rg-tr-westus/providers/Microsoft.Network/virtualNetworks/vnet-tr-westus/subnets/snet-db-tr-westus",
                "name": "snet-db-tr-westus",
                "security_group": "/subscriptions/f99fd6bf-e5f7-4050-8a87-7b12f5d4bb9f/resourceGroups/rg-tr-westus/providers/Microsoft.Network/networkSecurityGroups/nsg-db-tr-westus"
              },
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/f99fd6bf-e5f7-4050-8a87-7b12f5d4bb9f/resourceGroups/rg-tr-westus/providers/Microsoft.Network/virtualNetworks/vnet-tr-westus/subnets/snet-webapp-tr-westus",
                "name": "snet-webapp-tr-westus",
                "security_group": "/subscriptions/f99fd6bf-e5f7-4050-8a87-7b12f5d4bb9f/resourceGroups/rg-tr-westus/providers/Microsoft.Network/networkSecurityGroups/nsg-webapp-tr-westus"
              }
            ]
          }
        }
      ]
    }
  ]
}